[gd_scene load_steps=6 format=3 uid="uid://b7vr3htp1q3v8"]

[ext_resource type="Script" path="res://Scenes/events/trial.gd" id="1_epyhd"]
[ext_resource type="Texture2D" uid="uid://c34tpgfrdkjbq" path="res://Sprites/ui/screens/events/HouseEvent/Trials/Might.png" id="2_tiytt"]
[ext_resource type="FontFile" uid="uid://35ubclsxhjgd" path="res://Fonts/lunchds.ttf" id="3_yf0bt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f7h1i"]

[sub_resource type="LabelSettings" id="LabelSettings_75w18"]
font = ExtResource("3_yf0bt")
font_color = Color(0.662745, 0.286275, 0.286275, 1)
outline_size = 2
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="Trial" type="Control"]
light_mask = 7
custom_minimum_size = Vector2(160, 321)
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_right = 162.0
offset_bottom = 321.0
mouse_filter = 1
script = ExtResource("1_epyhd")

[node name="Sprite" type="Sprite2D" parent="."]
light_mask = 7
material = SubResource("ShaderMaterial_f7h1i")
position = Vector2(78, 160)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_tiytt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = 2.0
offset_right = 155.0
offset_bottom = 321.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="NameLabel" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 5.0
offset_top = 135.0
offset_right = 149.0
offset_bottom = 176.0
pivot_offset = Vector2(37, 20)
text = "Trial Of Might"
label_settings = SubResource("LabelSettings_75w18")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescriptionContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 174.0
offset_right = 153.0
offset_bottom = 315.0
alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="Control/DescriptionContainer"]
texture_filter = 1
clip_contents = false
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/default_color = Color(0.929412, 0.894118, 0.854902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/table_v_separation = 4
theme_override_constants/outline_size = 2
theme_override_constants/line_separation = 0
theme_override_fonts/normal_font = ExtResource("3_yf0bt")
theme_override_fonts/mono_font = ExtResource("3_yf0bt")
bbcode_enabled = true
text = "[center]Have an attack of greater than 5[/center]"
fit_content = true
scroll_active = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
